--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/mosque-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>prayers_timings</title>
+    <title>مواقيت الصلاة - Prayer Times</title>
+    <meta name="description" content="تطبيق مواقيت الصلاة للمدن التركية - عرض أوقات الصلاة اليومية مع العد التنازلي للصلاة القادمة" />
   </head>
   <body>
     <div id="root"></div>
